setup eslint and Plop generator

--- a/package.json
+++ b/package.json
@@ -13,22 +13,32 @@
     "dev": "turbo run dev test --parallel",
     "dev:api": "turbo run dev --filter=@story-engine/api",
     "quickstart": "scripts/quickstart",
-  "stop": "fish scripts/stop",
+    "stop": "fish scripts/stop",
     "build": "turbo run build",
     "typecheck": "turbo run typecheck",
     "lint": "pnpm run lint:code && pnpm run lint:md",
     "lint:code": "turbo run lint",
     "lint:md": "markdownlint \"**/*.md\" --ignore node_modules",
     "test": "turbo run test",
-    "clean": "turbo run clean"
+    "clean": "turbo run clean",
+    "plop": "plop"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
-    "@typescript-eslint/eslint-plugin": "^8.15.0",
-    "@typescript-eslint/parser": "^8.15.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
+    "@vitest/eslint-plugin": "^1.3.26",
     "eslint": "^9.38.0",
-    "eslint-plugin-import": "^2.31.0",
-    "turbo": "^2.5.8"
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-boundaries": "^5.1.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-svelte": "^3.12.5",
+    "eslint-plugin-unused-imports": "^4.3.0",
+    "plop": "^4.0.4",
+    "svelte-eslint-parser": "^1.4.0",
+    "turbo": "^2.5.8",
+    "plop": "^3.1.2"
   },
   "packageManager": "pnpm@10.19.0+sha512.c9fc7236e92adf5c8af42fd5bf1612df99c2ceb62f27047032f4720b33f8eacdde311865e91c411f2774f618d82f320808ecb51718bfa82c060c4ba7c76a32b8"
 }
