--- a/package.json
+++ b/package.json
@@ -21,10 +21,30 @@
     "lint:md": "markdownlint \"**/*.md\" --ignore node_modules",
     "test": "turbo run test",
     "clean": "turbo run clean",
-    "plop": "plop"
+    "plop": "plop",
+    "fmt": "prettier --write .",
+    "fmt:check": "prettier --check .",
+    "scaffold:feature": "plop feature",
+    "scaffold:page": "plop page",
+    "scaffold:widget": "plop widget",
+    "scaffold:entity": "plop entity",
+    "scaffold:store": "plop store",
+    "scaffold:action": "plop action",
+    "scaffold:api": "plop api",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,svelte,md,json}": [
+      "prettier --plugin prettier-plugin-svelte --write"
+    ],
+    "apps/web/src/lib/features/**/*.{ts,svelte}": [
+      "eslint --fix"
+    ]
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@testing-library/svelte": "^5.2.8",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "@vitest/eslint-plugin": "^1.3.26",
@@ -35,10 +55,14 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-svelte": "^3.12.5",
     "eslint-plugin-unused-imports": "^4.3.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.6",
     "plop": "^4.0.4",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
     "svelte-eslint-parser": "^1.4.0",
     "turbo": "^2.5.8",
-    "plop": "^3.1.2"
+    "vitest": "^2.1.9"
   },
   "packageManager": "pnpm@10.19.0+sha512.c9fc7236e92adf5c8af42fd5bf1612df99c2ceb62f27047032f4720b33f8eacdde311865e91c411f2774f618d82f320808ecb51718bfa82c060c4ba7c76a32b8"
 }
