--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,12 @@
     "@sveltejs/kit": "^2.0.0",
     "svelte": "^5.0.0",
     "vite": "^5.0.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "@sveltejs/vite-plugin-svelte": "4.0.4",
+    "@testing-library/jest-dom": "6.9.1",
+    "@testing-library/svelte": "5.2.8",
+    "@testing-library/user-event": "14.6.1",
+    "jsdom": "27.0.1",
+    "vitest": "2.1.9"
   }
 }
