--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "lint:code": "turbo run lint",
     "lint:md": "markdownlint \"**/*.md\" --ignore node_modules",
     "test": "turbo run test",
-    "test:web": "vitest -c apps/web/vitest.config.ts",
-    "test:web:run": "vitest run -c apps/web/vitest.config.ts",
+    "test:web": "pnpm -C apps/web vitest run",
+    "test:web:watch": "pnpm -C apps/web vitest",
+    "test:web:ui": "pnpm -C apps/web vitest --ui",
+    "test:web:run": "pnpm -C apps/web vitest run",
     "clean": "turbo run clean",
     "plop": "plop",
     "fmt": "prettier --write .",
