--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src --ext .ts,.svelte"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
