ci: use pnpm/action-setup before setup-node; fix act run; enable Svelte runes; fix studio route; vitest workflow uses pnpm filter exec; lint wiring for monorepo

--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "lint:code": "turbo run lint",
     "lint:md": "markdownlint \"**/*.md\" --ignore node_modules",
     "test": "turbo run test",
-    "test:web": "pnpm -C apps/web vitest run",
-    "test:web:watch": "pnpm -C apps/web vitest",
-    "test:web:ui": "pnpm -C apps/web vitest --ui",
-    "test:web:run": "pnpm -C apps/web vitest run",
+    "test:web": "pnpm --filter @story-engine/web exec vitest run",
+    "test:web:watch": "pnpm --filter @story-engine/web exec vitest",
+    "test:web:ui": "pnpm --filter @story-engine/web exec vitest --ui",
+    "test:web:run": "pnpm --filter @story-engine/web exec vitest run",
     "clean": "turbo run clean",
     "plop": "plop",
     "fmt": "prettier --write .",
